kubernetes/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    component: frontend
    release: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      component: frontend
      release: stable
  strategy:
      rollingUpdate:
        maxUnavailable: 0
        maxSurge: 2
  template:
    metadata:
      labels:
        app: nginx
        component: frontend
        release: stable
    spec:
      #anti-affinity is basically to keep pods on different nodes from another.
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: nginx
                  component: frontend
                  release: stable
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 1000

      containers:
        - name: nginx
          image: nginx:latest
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
              ephemeral-storage: 1Gi
            # Limits for cpu, memory and ephemeral-storage are mandatory.
            limits:
              cpu: 200m
              memory: 128Mi
              ephemeral-storage: 1Gi
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: prod.conf
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
